# tchat

./: Cargo.toml  LICENSE  README.md
client/: Cargo.toml
client/src/: components.rs  main.rs  ws_conn.rs
client/src/components/: chat.rs  config.rs  key.rs
client/src/style/: copy  style.css
client/src/ws_conn/: tor_proxy.rs  ws_proxy.rs
crypto/: Cargo.toml
crypto/src/: lib.rs
server/: Cargo.toml
server/src/: handler.rs  main.rs  ws.rs
