[workspace]
members = [
  "client",
  "server",
  "crypto"
]

[workspace.dependencies]
dioxus = { version = "0.6.3", features = ["launch", "desktop"] }
dioxus-router = "0.6.3"
dioxus-signals = "0.6.3"
dioxus-clipboard = "0.2.0"
tokio = { version = "1.43.0", features = ["full"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
toml = "0.8.20"
sqlx = { version = "0.8.3", features = ["runtime-tokio-native-tls", "sqlite"] }
tokio-tungstenite = { version = "0.26.1", features = ["native-tls"] }
native-tls = "0.2.13"
futures-util = "0.3.31"
reqwest = { version = "0.12.12", features = ["json", "native-tls", "socks"] }
url = "2.5.4"
tokio-stream = "0.1.17"
warp = { version = "0.3.7", features = ["tls"] }
chrono = "0.4.39"
curve25519-dalek = { version = "4.1.3", features = ["rand_core"] }
crypto-bigint = { version = "0.5.5", features = ["rand_core", "generic-array"] }
sha2 = "0.10.8"
hex = "0.4.3"
mnemonic = "1.1.1"
itertools = "0.14.0"
tokio-socks = "0.5.2"
arti = { version = "1.3.2", features = ["tokio", "native-tls", "experimental-api"] }
tor-rtcompat = { version = "0.26.0", features = ["tokio", "native-tls"] }
arti-client = "0.26.0"
tor-config = "0.26.0"
