[package]
name = "client"
workspace = ".."
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { workspace = true }
dioxus-router = { workspace = true }
dioxus-signals = { workspace = true }
dioxus-clipboard = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
sqlx = { workspace = true }
itertools = { workspace = true }
tokio-tungstenite = { workspace = true }
tokio-socks = { workspace = true }
native-tls = { workspace = true }
futures-util = { workspace = true }
reqwest = { workspace = true } 
url = { workspace = true }
chrono = { workspace = true }
arti = { workspace = true }
tor-rtcompat = { workspace = true }
arti-client = { workspace = true }
tor-config = { workspace = true }
crypto = { version = "0.1.0", path = "../crypto" }

[package.metadata.appimage]
auto_link = true
auto_link_exclude_list = [
    "ld-linux-x86-64.so.2",
    "libc.so.6",
    "libdl.so.2",
]
