[package]
name = "server"
workspace = ".."
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
tokio-stream = { workspace = true }
warp = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
sqlx = { workspace = true }
futures-util = { workspace = true }
curve25519-dalek = { workspace = true }
crypto-bigint = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
crypto = { version = "0.1.0", path = "../crypto" }

[package.metadata.appimage]
auto_link = true
